# virus-analyzer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: compile.yml
src/: gui.rs  handle_docker.rs  main.rs  web_server.rs
