[package]
name = "virus-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version="0.14.27", features=["full"]}
serde = "1.0.190"
serde_json = "1.0.108"
tokio = {version="1.33.0", features=["full"]}
futures-util = "0.3.29"
futures = "0.3.29"
bollard-next = "0.15.4"
uuid = { version = "1.5.0", features = ["v4"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true  # Enable link-time optimization.
codegen-units = 1 # Compile the entire crate as a single unit.


